<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_backup"
        android:enabled="false"
        android:title="@string/settings_backup_now"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore"
        android:enabled="false"
        android:title="@string/restore_backup_button"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true" />

    <item
        android:id="@+id/action_settings_expert"
        android:title="@string/settings_expert_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about_title"
        app:showAsAction="never" />

</menu>
