<?xml version="1.0" encoding="utf-8"?><!--
  SPDX-FileCopyrightText: 2024 The Calyx Institute
  SPDX-License-Identifier: Apache-2.0
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/webdavUrlLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:helperText="@string/storage_webdav_config_url_helper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/webdavUrlInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/storage_webdav_config_url"
            android:inputType="text|textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/webdavUserLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/webdavPassLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webdavUrlLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/webdavUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/storage_webdav_config_user"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/webdavPassLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webdavUserLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/webDavPassInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/storage_webdav_config_pass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/webdavButton"
        style="@style/SudPrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/storage_webdav_config_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webdavPassLayout"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/webdavButton"
        app:layout_constraintEnd_toEndOf="@+id/webdavButton"
        app:layout_constraintStart_toStartOf="@+id/webdavButton"
        app:layout_constraintTop_toTopOf="@+id/webdavButton"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
